Fix: make sure instructions to press Enter don't overlap item text

--- a/public/stylesheets/sass/checklists.sass
+++ b/public/stylesheets/sass/checklists.sass
@@ -183,7 +183,7 @@ li
   li.checklist_item
     font-size: 20px
     margin-bottom: 10px
-    width: 50%
+    width: 90%
     list-style-image: url('/images/unchecked.png')
     position: relative
     color: #4b5e8a
